--- a/wordcount/templates/word.html
+++ b/wordcount/templates/word.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>Word Count</h1>
+
+<a href="{% url 'help' %}">help
+</a>
+
 <form action="{% url 'count' %}">
     <textarea cols="100" rows="10" name="fulltext"></textarea>
     <p></p>
