--- a/wordcount/templates/count.html
+++ b/wordcount/templates/count.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+
 <h1> Word Count : {{ len }} word(s) in your text</h1>
-
+<br/>
 <a href="{% url 'home' %}">restart count</a>
-
 <a href="{% url 'help' %}">help</a>
 
+<form action="{% url 'count' %}">
+    <textarea cols="100" rows="10" name="fulltext"></textarea>
+    <p></p>
+    <input type="submit" value="count!"/>
+</form>
+
+<hr/>
 <h2> your words:</h2>
-{{ words }}
-</body>
-</html>
+{% for word, counts in worddict %}
+    {{ word }} - {{ counts }}
+    <br />
+{% endfor %}
