--- a/wordcount/templates/help.html
+++ b/wordcount/templates/help.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1> Help page</h1>
-
-<a href="{% url 'home' %}">go back</a>
+<h2>type in as many words you want and wordcount will count them for you.</h2>
+<a href="{% url 'home' %}">go back home</a>
 
 </body>
 </html>
