--- a/wordcount/templates/count.html
+++ b/wordcount/templates/count.html
@@ -3,6 +3,7 @@
 <br/>
 <a href="{% url 'home' %}">restart count</a>
 <a href="{% url 'help' %}">help</a>
+<a href="{% url 'static' %}">static</a>
 
 <form action="{% url 'count' %}">
     <textarea cols="100" rows="10" name="fulltext"></textarea>
