--- a/wordcount/templates/word.html
+++ b/wordcount/templates/word.html
@@ -7,8 +7,8 @@
 <body>
 <h1>Word Count</h1>
 
-<a href="{% url 'help' %}">help
-</a>
+<a href="{% url 'help' %}">help</a>
+<a href="{% url 'static' %}">static</a>
 
 <form action="{% url 'count' %}">
     <textarea cols="100" rows="10" name="fulltext"></textarea>
